--- a/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add_custom.xml
+++ b/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add_custom.xml
@@ -8,12 +8,12 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/addGoalText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Add Goal"
         android:textColor="#ffffff"
-        android:id="@+id/mytext"
         android:textSize="18sp" />
 
 
