Finished AddHabit GUI
- Added Habit class
- Tested ListView on Homepage

--- a/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add.xml
+++ b/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Add Goal"
+        android:text="Add Habit"
         android:textColor="#ffffff"
         android:id="@+id/mytext"
         android:textSize="18sp" />
