--- a/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add_custom.xml
+++ b/GoalsHabitsReminders/app/src/main/res/layout/abs_layout_add_custom.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Add Goal"
+        android:text="Add Habit"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
