--- a/GoalsHabitsReminders/app/src/main/res/layout/activity_home.xml
+++ b/GoalsHabitsReminders/app/src/main/res/layout/activity_home.xml
@@ -8,27 +8,11 @@
     android:background="@color/darkgrey"
     tools:context="mitchbryant.goalshabitsreminders.HomeActivity">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        android:textColor="@android:color/holo_blue_dark"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ListView
+        android:id="@+id/habitList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        />
 
 </android.support.constraint.ConstraintLayout>
